[package]
name = "marinade-client-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-sdk = "2.3.1"
once_cell = "1.8.0"
thiserror = "1.0.30"
anyhow = "1.0.71"
bincode = "1.3.3"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account  = { version = "7.0.0", features = ["no-entrypoint"] }
log = "0.4.18"
solana-client = "2.3.1"
marinade-finance = { git = "https://github.com/kfastov/marinade-staking-program.git", branch = "main" }
dynsigner = { path = "../dynsigner" }
anchor-lang = "0.31.1"
anchor-client = "0.31.1"
borsh = "0.10.4"
